--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~12.2.0",
     "@swimlane/ngx-charts": "^19.0.1",
     "d3-scale": "^4.0.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
+    "ngx-permissions": "^8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
