js prod optimalization

--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,16 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": true,
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": true,
+              "buildOptimizer": true,
+              "deleteOutputPath": true
             },
             "development": {
               "buildOptimizer": false,
