--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@angular-material-components/datetime-picker": "^6.0.3",
     "@angular/animations": "~12.2.0",
     "@angular/cdk": "^12.2.11",
-    "@angular/common": "~12.2.0",
     "@angular/cli": "~12.2.0",
+    "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@angular/core": "~12.2.0",
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@swimlane/ngx-charts": "^19.0.1",
+    "compression": "^1.7.4",
     "d3-scale": "^4.0.2",
     "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
@@ -31,8 +32,8 @@
     "ngx-permissions": "^8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.11",
