--- a/angular.json
+++ b/angular.json
@@ -58,16 +58,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all",
-              "optimization": true,
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": true,
-              "buildOptimizer": true,
-              "deleteOutputPath": true
+              "outputHashing": "all"
             },
             "development": {
               "buildOptimizer": false,
